config save fixed